--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="topnav">
+        <a href="" class="logo">m</a>
+        <a href="index.html">home</a>
+        <a href="index.html">about</a>
+        <a href="index.html">projects</a>
+        <a href="index.html">contact</a>
+        <a href="index.html">resume</a>
+      </div>
+    </header>
+  </body>
 </html>
