Add header navigation
See: #1

--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <div class="topnav">
-        <a href="" class="logo">m</a>
-        <a href="index.html">home</a>
-        <a href="index.html">about</a>
-        <a href="index.html">projects</a>
-        <a href="index.html">contact</a>
-        <a href="index.html">resume</a>
+      <div class="container">
+        <nav class="topnav">
+          <a class="logo" href="">m</a>
+          <a class="link--top" href="index.html">home</a>
+          <a class="link--top" href="index.html">about</a>
+          <a class="link--top" href="index.html">projects</a>
+          <a class="link--top" href="index.html">contact</a>
+          <a class="resume" href="index.html">resume</a>
+          <div class="menu-container">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
+        </nav>
       </div>
     </header>
+
+    <script src="code/index.js"></script>
   </body>
 </html>
