--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <body>
     <header>
       <div class="container">
+        <a class="logo" href="">m</a>
         <nav class="topnav">
-          <a class="logo" href="">m</a>
           <a class="link--top" href="index.html">home</a>
           <a class="link--top" href="index.html">about</a>
           <a class="link--top" href="index.html">projects</a>
           <a class="link--top" href="index.html">contact</a>
-          <a class="resume" href="index.html">resume</a>
-          <div class="menu-container">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-          </div>
+          <a class="resume button" href="index.html">resume</a>
         </nav>
+        <div class="menu-container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
       </div>
     </header>
 
