--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
           <a class="link--top" href="index.html">contact</a>
           <a class="resume button" href="index.html">resume</a>
         </nav>
-        <div class="menu-container">
+        <div class="menu-container menubtn">
           <div class="bar1"></div>
           <div class="bar2"></div>
           <div class="bar3"></div>
+        </div>
+
+        <div class="sidenav">
+          <a class="link--menu" href="index.html">home</a>
+          <a class="link--menu" href="index.html">about</a>
+          <a class="link--menu" href="index.html">projects</a>
+          <a class="link--menu" href="index.html">contact</a>
+          <a class="link--menu" href="index.html">resume</a>
         </div>
       </div>
     </header>
