Fix header, slide menu and hero
See: #1

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a class="logo" href="">m</a>
         <nav class="topnav">
           <a class="link--top" href="index.html">home</a>
-          <a class="link--top" href="index.html">about</a>
+          <a class="link--top" href="index.html">about me</a>
           <a class="link--top" href="index.html">projects</a>
           <a class="link--top" href="index.html">contact</a>
-          <a class="resume button" href="index.html">resume</a>
+          <a class="button--resume" href="index.html">resume</a>
         </nav>
         <div class="menu-container menubtn">
           <div class="bar1"></div>
@@ -32,7 +32,7 @@
 
         <div class="sidenav">
           <a class="link--menu" href="index.html">home</a>
-          <a class="link--menu" href="index.html">about</a>
+          <a class="link--menu" href="index.html">about me</a>
           <a class="link--menu" href="index.html">projects</a>
           <a class="link--menu" href="index.html">contact</a>
           <a class="link--menu" href="index.html">resume</a>
@@ -45,6 +45,18 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="hero">
+        <div class="hero-container">
+          <h1 class="hero-title">mikaeil eghbal</h1>
+          <p class="hero-subtitle">
+            Hello! I'm a web developer focused on front-end. Mostly I use divide
+            and conquer algorithm to solve my everyday issues.
+          </p>
+          <a class="button" href="index.html">view my work</a>
+        </div>
+      </div>
+    </main>
 
     <script src="code/index.js"></script>
   </body>
