--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" href="">m</a>
+        <a id="logo" class="logo" href="">m</a>
         <nav class="topnav">
           <a class="link--top" href="index.html">home</a>
-          <a class="link--top" href="index.html">about me</a>
+          <a class="link--top" href="index.html">about</a>
           <a class="link--top" href="index.html">projects</a>
           <a class="link--top" href="index.html">contact</a>
           <a class="button--resume" href="index.html">resume</a>
@@ -30,7 +30,7 @@
           <div class="bar3"></div>
         </div>
 
-        <div class="sidenav">
+        <!-- <div class="sidenav">
           <a class="link--menu" href="index.html">home</a>
           <a class="link--menu" href="index.html">about me</a>
           <a class="link--menu" href="index.html">projects</a>
@@ -42,7 +42,7 @@
             <a href=""><i class="fa fa-linkedin"></i></a>
             <a href=""><i class="fa fa-github"></i></a>
           </div>
-        </div>
+        </div> -->
       </div>
     </header>
     <main>
@@ -57,7 +57,30 @@
         </div>
       </div>
     </main>
-
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta nobis amet
+      maxime laudantium repudiandae error vero ab veniam sit a? Error deserunt
+      quam ratione quos, commodi sunt officia ab exercitationem quisquam
+      voluptate fugit perferendis dolor cum omnis repellat aliquid repudiandae
+      facere odit quaerat magni voluptatum beatae. Voluptatum delectus cum
+      repellendus accusamus ex iusto ipsa quam ea blanditiis, excepturi, nostrum
+      obcaecati voluptates nemo. Nostrum, incidunt dolore. Harum facilis error
+      magni tenetur assumenda temporibus nostrum ab rerum praesentium,
+      perspiciatis facere quis vero incidunt consequuntur modi ipsum optio
+      reprehenderit, dicta at et aliquam est? Quia asperiores in eaque, odit
+      illo suscipit, vero explicabo nisi quis aliquam error eligendi maiores
+      nesciunt amet vel, dolore quaerat. Laudantium tempora laborum voluptate
+      hic repellat? Provident adipisci voluptate tempora quia sequi asperiores,
+      consectetur, perspiciatis illum alias, numquam culpa beatae! Voluptatem,
+      aut. Enim odit delectus at, error libero eius laborum cupiditate commodi
+      numquam possimus iste omnis perferendis neque obcaecati reprehenderit
+      optio deleniti dignissimos voluptas quod mollitia? Consequatur vero
+      voluptas facilis quo earum quam minus. Eius sunt temporibus esse. Alias
+      provident molestiae ipsa sapiente dolorem. Obcaecati magni tempora ad
+      laudantium ipsam, distinctio, inventore id delectus enim similique quidem
+      iure in nostrum aliquam ipsa. Vero laudantium doloribus sequi temporibus
+      distinctio placeat!
+    </p>
     <script src="code/index.js"></script>
   </body>
 </html>
