--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Header section -->
     <header>
       <div class="container">
         <a id="logo" class="logo" href="">m</a>
         <nav class="topnav">
-          <a class="link--top" href="index.html">home</a>
-          <a class="link--top" href="index.html">about</a>
+          <a class="link--top" href="index.html#top">home</a>
+          <a class="link--top" href="index.html#about-section">about</a>
           <a class="link--top" href="index.html">projects</a>
           <a class="link--top" href="index.html">contact</a>
           <a class="button--resume" href="index.html">resume</a>
@@ -45,6 +46,8 @@
         </div> -->
       </div>
     </header>
+
+    <!-- Hero section -->
     <main>
       <div class="hero">
         <div class="hero-container">
@@ -57,30 +60,60 @@
         </div>
       </div>
     </main>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta nobis amet
-      maxime laudantium repudiandae error vero ab veniam sit a? Error deserunt
-      quam ratione quos, commodi sunt officia ab exercitationem quisquam
-      voluptate fugit perferendis dolor cum omnis repellat aliquid repudiandae
-      facere odit quaerat magni voluptatum beatae. Voluptatum delectus cum
-      repellendus accusamus ex iusto ipsa quam ea blanditiis, excepturi, nostrum
-      obcaecati voluptates nemo. Nostrum, incidunt dolore. Harum facilis error
-      magni tenetur assumenda temporibus nostrum ab rerum praesentium,
-      perspiciatis facere quis vero incidunt consequuntur modi ipsum optio
-      reprehenderit, dicta at et aliquam est? Quia asperiores in eaque, odit
-      illo suscipit, vero explicabo nisi quis aliquam error eligendi maiores
-      nesciunt amet vel, dolore quaerat. Laudantium tempora laborum voluptate
-      hic repellat? Provident adipisci voluptate tempora quia sequi asperiores,
-      consectetur, perspiciatis illum alias, numquam culpa beatae! Voluptatem,
-      aut. Enim odit delectus at, error libero eius laborum cupiditate commodi
-      numquam possimus iste omnis perferendis neque obcaecati reprehenderit
-      optio deleniti dignissimos voluptas quod mollitia? Consequatur vero
-      voluptas facilis quo earum quam minus. Eius sunt temporibus esse. Alias
-      provident molestiae ipsa sapiente dolorem. Obcaecati magni tempora ad
-      laudantium ipsam, distinctio, inventore id delectus enim similique quidem
-      iure in nostrum aliquam ipsa. Vero laudantium doloribus sequi temporibus
-      distinctio placeat!
-    </p>
+
+    <!-- About section -->
+    <section id="about-section" class="about-section">
+      <div class="title-container">
+        <h2 class="section-title">About me</h2>
+        <h4 class="section-subtitle">Let me please introduce myself</h4>
+      </div>
+      <div class="container">
+        <article class="about-image">
+          <picture>
+            <source media="(min-width: 481px)" srcset="images/mikaeil-01.jpg" />
+            <img src="images/mikaeil-01-small.jpg" alt="Mikaeil Eghbal" />
+          </picture>
+        </article>
+        <article class="about-social social">
+          <a class="link--social" href="http://facebook.com/mikaeileghbal"
+            ><i class="fa fa-facebook"></i
+          ></a>
+          <a class="link--social" href="http://instagram/mikaeil.e"
+            ><i class="fa fa-instagram"></i
+          ></a>
+          <a class="link--social" href="http://linkedin.com/mikaeileghbal"
+            ><i class="fa fa-linkedin"></i
+          ></a>
+          <a class="link--social" href="https://github.com/mikaeileghbal"
+            ><i class="fa fa-github"></i
+          ></a>
+        </article>
+        <article class="about-info">
+          <p>
+            I am a software engineer focused on front-end web developement.
+            Mostly I use divide and conquer algorithm to solve my everyday
+            issues. I like to resolve problems and create attractive, functional
+            and fully Responsive user interfaces and web applications using
+            modern web technologies. I am happy to see you here.
+          </p>
+          <p class="language">
+            I speak <span class="language__item">English</span
+            ><img src="images/us.jpg" alt="" />,
+            <span class="language__item">Turkish</span
+            ><img src="images/tr.svg" alt="" />,
+            <span class="language__item">Persian</span
+            ><img src="images/ir.png" alt="" /> and
+            <span class="language__item">Deutsch</span
+            ><img src="images/gr.png" alt="" />
+          </p>
+
+          <a href="mailto:mikaeileghbal@yahoo.com" class="button" tag="message"
+            >Contact</a
+          >
+        </article>
+      </div>
+    </section>
+
     <script src="code/index.js"></script>
   </body>
 </html>
