Modify color pallete
See: #9

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<span class="language__item">Turkish</span
 						><img src="images/tr.svg" alt="" />,
 						<span class="language__item">Persian</span
-						><img src="images/ir.png" alt="" /> and
+						><img src="images/ir.png" alt="" /> and I am learning
 						<span class="language__item">Deutsch</span
 						><img src="images/gr.png" alt="" />
 					</p>
