Add contact section
See: #11

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a class="link--top" href="#top">home</a>
 					<a class="link--top" href="#about-section">about</a>
 					<a class="link--top" href="#case-study-section">projects</a>
-					<a class="link--top" href="#">contact</a>
+					<a class="link--top" href="#contact-section">contact</a>
 					<a class="button--resume" href="#">resume</a>
 				</nav>
 				<div class="menu-container menubtn">
@@ -147,6 +147,31 @@
 					</figcaption>
 				</figure> -->
 			</div>
+		</section>
+
+		<!-- Contact section -->
+		<section id="contact-section" class="contact-section centered-text">
+			<div class="title-container">
+				<h2 class="section-title">Contact</h2>
+				<h4 class="section-subtitle">Would you like to contact?</h4>
+			</div>
+
+			<p class="contact-text">
+				If you like my work and would like to work together, please send me
+				direct message or contact me through my social links.
+			</p>
+			<a
+				href="mailto:mikaeileghbal@yahoo.com"
+				class="button--email"
+				tag="message"
+				><i class="fa fa-envelope"></i> Send message</a
+			>
+			<article class="contact-social social">
+				<a class="fa fa-facebook" href="http://facebook.com/mikaeileghbal"></a>
+				<a class="fa fa-instagram" href="http://instagram/mikaeil.e"> </a>
+				<a class="fa fa-linkedin" href="http://linkedin.com/mikaeileghbal"> </a>
+				<a class="fa fa-github" href="https://github.com/mikaeileghbal"> </a>
+			</article>
 		</section>
 
 		<script src="code/index.js"></script>
