Fix projects button url

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 						Hello! I'm a web developer focused on front-end. Mostly I use divide
 						and conquer algorithm to solve my everyday issues.
 					</p>
-					<a id="hero-button" class="button" href="index.html">View my work</a>
+					<a id="hero-button" class="button" href="#case-study-section"
+						>View my work</a
+					>
 				</div>
 			</div>
 		</main>
